parser/tests/parser/complex/invalid/basic_6.mf2
.foo { :hello }
{{}}
=== spans ===
                    .foo { :hello }↵{{}}
ComplexMessage      ^^^^^^^^^^^^^^^^^^^^
QuotedPattern                       ^^^^
Pattern             
=== diagnostics ===
Found a statement that is invalid because the keyword 'foo' is keyword. (at @0..15)
  .foo { :hello }↵{{}}
  ^^^^^^^^^^^^^^^
=== ast ===
ComplexMessage {
    span: @0..20,
    declarations: [],
    body: QuotedPattern {
        span: @16..20,
        pattern: Pattern {
            parts: [],
        },
    },
}